--- a/Projeto.html
+++ b/Projeto.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Museu Fucapi</title>
   </head>
 <body>
@@ -63,4 +64,5 @@
     </div>
   </div>
 </body>
+
 </html>
